--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+paypalrestsdk==1.13.1 
+python-dotenv==1.0.0 
 fastapi==0.104.1 
 uvicorn==0.24.0 
-python-dotenv==1.0.0 
 supabase==1.0.3 
 httpx==0.23.3 
 deep-translator==1.11.4 
