--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-paypalrestsdk==1.13.1 
-python-dotenv==1.0.0 
 fastapi==0.104.1 
 uvicorn==0.24.0 
+python-dotenv==1.0.0 
 supabase==1.0.3 
 httpx==0.23.3 
 requests==2.31.0 
+jinja2==3.1.2 
+paypalrestsdk==1.13.1 
